# Open.HD-NG

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: amd64.yml  build-debs.yml
cmake/: UseCython.cmake  version.cmake
conf/: openhd  openhd-settings-1.txt
python/: CMakeLists.txt  MavlinkTelemetry.py  MultiWii.py  camera.py  fec.pyx  format_as_table.py  openhd_controller  openhd_settings.py  py_v4l2.pyx  settings.py  telemetry.py  transmitter.py  video_player.py  wfb_bridge_settings.py  wifi_settings.py
repo/dists/bionic/: Release
repo/dists/bionic/main/binary-armhf/: open.hd-ng_0.1.0_armhf.deb
repo/dists/buster/: Release
repo/dists/buster/main/binary-armhf/: open.hd-ng_0.1.0_armhf.deb
repo/dists/kali-rolling/: Release
repo/dists/kali-rolling/main/binary-amd64/: open.hd-ng_0.1.0_amd64.deb
repo/dists/stretch/: Release
repo/dists/stretch/main/binary-armhf/: open.hd-ng_0.1.0-1_armhf.deb
scripts/: mkdeb  update-debs  update-release
services/: openhd.service
